* Italian translation update * someone please translate German strings in the_poolmonster.po into English

--- a/translation/it/maylons_grave.po
+++ b/translation/it/maylons_grave.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2011-10-25 21:51+0200\n"
+"PO-Revision-Date: 2011-10-28 16:36+0200\n"
 "Last-Translator: Eugenio Fagioli <eugenio.fagioli@gmail.com>\n"
 "Language-Team: Italiano <>\n"
 "Language: it\n"
@@ -268,4 +268,4 @@ msgstr ""
 
 #: maylons_grave.xml
 msgid "name..\" received an item from Maylons Grave."
-msgstr ""
+msgstr "name..\" ha ricevuto un'oggetto dalla tomba di Maylon."
