--- a/translation/it/herb_collector.po
+++ b/translation/it/herb_collector.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: sumwars 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2011-10-21 22:11+0200\n"
+"PO-Revision-Date: 2011-10-28 16:35+0200\n"
 "Last-Translator: Eugenio Fagioli <eugenio.fagioli@gmail.com>\n"
 "Language-Team: Italiano <>\n"
 "Language: it\n"
@@ -29,17 +29,16 @@ msgid "And another good deed done. I could get used to this."
 msgstr "E un'altra buona azione e' stata fatta. Ormai potrei abituarmici."
 
 #: herbalist.xml
-#, fuzzy
 msgid ""
 "The herbalist of Joringsbridge wants to have the berries of 10 bushes. "
 "Berries from \"..(herbalist.bushes)..\" bushes have been collected."
 msgstr ""
-"L'erborista di Joringsbridge vuole le bacche di 10 arbusti. \"..(10 - "
-"herbalist.bushes)..\" sono state collezionate"
+"L'erborista di Ponte Joring vorrebbe le bacche di 10 arbusti. \"..(herbalist."
+"bushes)..\" sono state collezionate"
 
 #: herbalist.xml
 msgid "joringsbridge"
-msgstr "Joringsbridge"
+msgstr "Ponte Joring"
 
 #: herbalist.xml
 msgid "Gertlinde Kampfer"
