--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,5 +1,5 @@
-sumwars (0.5.5-1) unstable; urgency=low
+sumwars (0.5.5~svn-r2641-1) unstable; urgency=low
 
   * Initial release (Closes: #597857).
 
- -- Manuel A. Fernandez Montecelo <manuel.montezelo@gmail.com>  Fri, 28 Oct 2011 10:07:08 +0200
+ -- Manuel A. Fernandez Montecelo <manuel.montezelo@gmail.com>  Mon, 31 Oct 2011 10:07:08 +0100
