--- a/translation/de/menu.po
+++ b/translation/de/menu.po
@@ -2,16 +2,17 @@
 # Copyright (C) 2009
 # This file is distributed under the same license as the sumwars package.
 # kalimgard <kalimgard@users.sourceforge.net>, 2010-2011.
+# kalimgard <kalimgard@users.sourceforge.net>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-09-12 21:30+0200\n"
-"PO-Revision-Date: 2011-09-25 14:43+0200\n"
-"Last-Translator: Stefan <some.fusion@gmail.com>\n"
-"Language-Team: german <de@sumwars>\n"
+"PO-Revision-Date: 2011-11-01 \n"
+"Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
+"Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -194,8 +195,7 @@ msgstr "Willenskraft"
 msgid " max. "
 msgstr "max. "
 
-#: ../src/gui/itemwindow.cpp:168
-#: ../src/gui/itemwindow.cpp:169
+#: ../src/gui/itemwindow.cpp:168 ../src/gui/itemwindow.cpp:169
 msgid "Equipped:\n"
 msgstr "Angelegt:\n"
 
@@ -213,11 +213,11 @@ msgstr "Angelegt (rechts):\n"
 
 #: ../src/gui/itemwindow.cpp:256
 msgid "Hovered:\n"
-msgstr ""
+msgstr "Unter der Maus:\n"
 
 #: ../src/gui/itemwindow.cpp:265
 msgid "Attached:\n"
-msgstr ""
+msgstr "Angelegt:\n"
 
 #: ../src/gui/charcreate.cpp:120 ../src/gui/charinfo.cpp:864
 #: ../src/gui/partyinfo.cpp:450 ../src/gui/savegamelist.cpp:186
@@ -243,11 +243,11 @@ msgstr "Angriff"
 
 #: ../src/gui/charinfo.cpp:325
 msgid "You have"
-msgstr ""
+msgstr "Es gibt"
 
 #: ../src/gui/charinfo.cpp:325
 msgid "attribute points to spend"
-msgstr ""
+msgstr "Attributspunkte zu verteilen"
 
 #: ../src/gui/charinfo.cpp:569
 msgid "Damage dealt by "
@@ -259,7 +259,7 @@ msgstr "Trefferchance"
 
 #: ../src/gui/charinfo.cpp:604
 msgid "Evade"
-msgstr ""
+msgstr "Ausweichen"
 
 #: ../src/gui/charinfo.cpp:622
 msgid "Chance to get hit by "
@@ -267,19 +267,19 @@ msgstr "Chance getroffen zu werden"
 
 #: ../src/gui/charinfo.cpp:642
 msgid "Player info"
-msgstr ""
+msgstr "Spieler Informationen"
 
 #: ../src/gui/charinfo.cpp:645
 msgid "Attributes"
-msgstr ""
+msgstr "Attribute"
 
 #: ../src/gui/charinfo.cpp:648
 msgid "Offense"
-msgstr ""
+msgstr "Angriff"
 
 #: ../src/gui/charinfo.cpp:651
 msgid "Defense"
-msgstr ""
+msgstr "Verteidigung"
 
 #: ../src/gui/charinfo.cpp:713
 msgid "Damage dealt to  "
@@ -298,9 +298,11 @@ msgstr ""
 
 #: ../src/gui/charinfo.cpp:880
 msgid ""
-"Willpower decreases the duration and the impact of status changes \n and increases magical melee damage."
+"Willpower decreases the duration and the impact of status changes \n"
+" and increases magical melee damage."
 msgstr ""
-"Willenskraft senkt die Dauer und die Stärke von Statusveränderungen \n und erhöht magischen Nahkampfschaden."
+"Willenskraft senkt die Dauer und die Stärke von Statusveränderungen \n"
+" und erhöht magischen Nahkampfschaden."
 
 #: ../src/gui/charinfo.cpp:884
 msgid "Magic power"
@@ -406,15 +408,15 @@ msgstr "Drop:"
 
 #: ../src/gui/inventory.cpp:372
 msgid "Small"
-msgstr ""
+msgstr "Klein"
 
 #: ../src/gui/inventory.cpp:375
 msgid "Medium"
-msgstr ""
+msgstr "Mittel"
 
 #: ../src/gui/inventory.cpp:378
 msgid "Big"
-msgstr ""
+msgstr "Groß"
 
 #: ../src/gui/mainmenu.cpp:132
 msgid "Single player"
@@ -438,15 +440,15 @@ msgstr "Beenden"
 
 #: ../src/gui/mainmenu.cpp:632
 msgid "Really delete savegame?"
-msgstr ""
+msgstr "Gespeicherten Spielstand wirklich löschen?"
 
 #: ../src/gui/mainmenu.cpp:632
 msgid "Yes"
-msgstr ""
+msgstr "Ja"
 
 #: ../src/gui/mainmenu.cpp:632
 msgid "No"
-msgstr ""
+msgstr "Nein"
 
 #: ../src/gui/messageboxes.cpp:52 ../src/gui/messageboxes.cpp:198
 #: ../src/gui/networkwindows.cpp:95 ../src/gui/networkwindows.cpp:223
@@ -476,71 +478,71 @@ msgstr "Host"
 
 #: ../src/gui/optionswindow.cpp:91
 msgid "Easy"
-msgstr ""
+msgstr "Einfach"
 
 #: ../src/gui/optionswindow.cpp:92
 msgid "Normal"
-msgstr ""
+msgstr "Normal"
 
 #: ../src/gui/optionswindow.cpp:93
 msgid "Hard"
-msgstr ""
+msgstr "Schwer"
 
 #: ../src/gui/optionswindow.cpp:94
 msgid "Insane"
-msgstr ""
+msgstr "Verrückt"
 
 #: ../src/gui/optionswindow.cpp:164
 msgid "White"
-msgstr ""
+msgstr "Weiß"
 
 #: ../src/gui/optionswindow.cpp:165
 msgid "Black"
-msgstr ""
+msgstr "Schwarz"
 
 #: ../src/gui/optionswindow.cpp:166
 msgid "Red"
-msgstr ""
+msgstr "Rot"
 
 #: ../src/gui/optionswindow.cpp:167
 msgid "Green"
-msgstr ""
+msgstr "Grün"
 
 #: ../src/gui/optionswindow.cpp:168
 msgid "Blue"
-msgstr ""
+msgstr "Blau"
 
 #: ../src/gui/optionswindow.cpp:169
 msgid "Yellow"
-msgstr ""
+msgstr "Gelb"
 
 #: ../src/gui/optionswindow.cpp:170
 msgid "Magenta"
-msgstr ""
+msgstr "Magenta"
 
 #: ../src/gui/optionswindow.cpp:171
 msgid "Cyan"
-msgstr ""
+msgstr "Cyan"
 
 #: ../src/gui/optionswindow.cpp:172
 msgid "Orange"
-msgstr ""
+msgstr "Orange"
 
 #: ../src/gui/optionswindow.cpp:173
 msgid "Pink"
-msgstr ""
+msgstr "Pink"
 
 #: ../src/gui/optionswindow.cpp:174
 msgid "Purple"
-msgstr ""
+msgstr "Lila"
 
 #: ../src/gui/optionswindow.cpp:175
 msgid "Cornflower Blue"
-msgstr ""
+msgstr "Blaue Kornblume"
 
 #: ../src/gui/optionswindow.cpp:211
 msgid "System default"
-msgstr ""
+msgstr "System Standard"
 
 #: ../src/gui/optionswindow.cpp:308
 msgid "Shortkeys"
@@ -623,26 +625,24 @@ msgid "failed"
 msgstr "gescheitert"
 
 #: ../src/gui/savegamelist.cpp:174
-#, fuzzy
 msgid "Characters"
 msgstr "Charakter Bildschirm"
 
 #: ../src/gui/savegamelist.cpp:183
 msgid "Delete"
-msgstr ""
+msgstr "Löschen"
 
-#: ../src/gui/savegamelist.cpp:188
-#: ../src/gui/charinfo.cpp:488
+#: ../src/gui/savegamelist.cpp:188 ../src/gui/charinfo.cpp:488
 msgid "Level"
 msgstr "Level"
 
 #: ../src/gui/skilltree.cpp:537
 msgid "Skillpoints"
-msgstr ""
+msgstr "Skillpunkte"
 
 #: ../src/gui/skilltree.cpp:542
 msgid "Next Skillpoint at Level"
-msgstr ""
+msgstr "Nächster Skillpunkt bei Level"
 
 #: ../src/gui/worldmap.cpp:141
 msgid "Town Portal"
@@ -650,101 +650,99 @@ msgstr "Stadtportal"
 
 #: playerclasses.xml
 msgid "Warrior"
-msgstr ""
+msgstr "Krieger"
 
 #: playerclasses.xml
-#, fuzzy
 msgid "Magician"
-msgstr "Magieangriff"
+msgstr "Magier"
 
 #: playerclasses.xml
-#, fuzzy
 msgid "Archer"
-msgstr "Wilderer"
+msgstr "Bogenschütze"
 
 #: playerclasses.xml
 msgid "Priest"
-msgstr ""
+msgstr "Priester"
 
 #: playerclasses.xml
 msgid "ranger"
-msgstr ""
+msgstr "Waldläufer"
 
 #: playerclasses.xml
 msgid "archer"
-msgstr ""
+msgstr "Bogenschützin"
 
 #: playerclasses.xml
 msgid "wizard"
-msgstr ""
+msgstr "Zauberer"
 
 #: playerclasses.xml
 msgid "sorceress"
-msgstr ""
+msgstr "Zauberin"
 
 #: playerclasses.xml
 msgid "mage"
-msgstr ""
+msgstr "Magier"
 
 #: playerclasses.xml
 msgid "priest"
-msgstr ""
+msgstr "Priester"
 
 #: playerclasses.xml
 msgid "priestess"
-msgstr ""
+msgstr "Priesterin"
 
 #: playerclasses.xml
 msgid "warrior"
-msgstr ""
+msgstr "Krieger"
 
 #: playerclasses.xml
 msgid "fencer"
-msgstr ""
+msgstr "Fechterin"
 
 #: playerclasses.xml
 msgid "Fire magic"
-msgstr ""
+msgstr "Feuermagie"
 
 #: playerclasses.xml
 msgid "Ice magic"
-msgstr ""
+msgstr "Eismagie"
 
 #: playerclasses.xml
 msgid "Air magic"
-msgstr ""
+msgstr "Luftmagie"
 
 #: playerclasses.xml
 msgid "Light Magic"
-msgstr ""
+msgstr "Lichtmagie"
 
 #: playerclasses.xml
 msgid "Water Magic"
-msgstr ""
+msgstr "Wassermagie"
 
 #: playerclasses.xml
 msgid "Wind Magic"
-msgstr ""
+msgstr "Windmagie"
 
 #: playerclasses.xml
 msgid "Marksmanship"
-msgstr ""
+msgstr "Schießkunst"
 
 #: playerclasses.xml
 msgid "Fighting skills"
-msgstr ""
+msgstr "Kampfkünste"
 
 #: playerclasses.xml
 msgid "Passive skills"
-msgstr ""
+msgstr "Passive Fähigkeiten"
 
 #: playerclasses.xml
 msgid "Fighting spirit"
-msgstr ""
+msgstr "Kampfgeist"
 
 #: playerclasses.xml
 msgid "Hunter magic"
-msgstr ""
+msgstr "Jagdmagie"
 
 #~ msgid "Savegame"
 #~ msgstr "Gespeichertes Spiel"
