--- a/translation/de/rescue_willard.po
+++ b/translation/de/rescue_willard.po
@@ -1,17 +1,17 @@
 # German translations for sumwars package
 # Copyright (C) 2009
 # This file is distributed under the same license as the sumwars package.
-# kalimgard <kalimgard@users.sourceforge.net>, 2010.
+# kalimgard <kalimgard@users.sourceforge.net>, 2010, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-12-07 \n"
+"PO-Revision-Date: 2011-11-01 \n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
 "Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -64,7 +64,7 @@ msgstr "Willard"
 
 #: rescue_willard.xml
 msgid "I hope you are making a good time searching for Willard. ##solo"
-msgstr "Ich hoffe, Ihr kommt mit Eurer Suche nach Willard voran. ##solo"
+msgstr "Ich hoffe, Ihr kommt mit Eurer Suche nach Willard voran."
 
 #: rescue_willard.xml
 msgid "I hope you are making a good time searching for Willard."
