--- a/translation/de/rob_the_robber.po
+++ b/translation/de/rob_the_robber.po
@@ -1,17 +1,17 @@
 # German translations for sumwars package
 # Copyright (C) 2009
 # This file is distributed under the same license as the sumwars package.
-# kalimgard <kalimgard@users.sourceforge.net>, 2010.
+# kalimgard <kalimgard@users.sourceforge.net>, 2010, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.5\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-03-09 15:15+0100\n"
-"PO-Revision-Date: 2010-08-31 17:29+0200\n"
+"PO-Revision-Date: 2011-11-01 \n"
 "Last-Translator: kalimgard <kalimgard@users.sourceforge.net>\n"
-"Language-Team: german <de@sumwars>\n"
+"Language-Team: german <translation-team-de@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -157,9 +157,8 @@ msgid "Just curious."
 msgstr "Nur neugierig."
 
 #: rob_the_robber.xml
-#, fuzzy
 msgid "Rob the Robber killed"
-msgstr "Rob der Räuber (Belohnung)"
+msgstr "Rob der Räuber ist tot."
 
 #: rob_the_robber.xml
 msgid "Here is the necklace of Rob the robber."
@@ -167,26 +166,27 @@ msgstr "Hier ist das Halsband von Rob, dem Räuber."
 
 #: rob_the_robber.xml
 msgid "I'll be damned!"
-msgstr ""
+msgstr "Ich will verdammt sein!"
 
 #: rob_the_robber.xml
-#, fuzzy
 msgid "You really got him?"
-msgstr "Hat ihn tatsächlich jemand erwischt?"
+msgstr "Habt Ihr ihn tatsächlich erwischt?"
 
 #: rob_the_robber.xml
 msgid ""
 "Better hope that the stories about him rising from his grave are just "
 "fairytales."
 msgstr ""
+"Hofft besser, dass die Geschichten über seine Auferstehungen aus dem Grab "
+"nur Märchen sind."
 
 #: rob_the_robber.xml
 msgid "What about my reward?"
-msgstr ""
+msgstr "Was ist mit meiner Belohnung?"
 
 #: rob_the_robber.xml
 msgid "Sergeant Wober in Dwarfenwall has it."
-msgstr ""
+msgstr "Sergeant Wober in Zwergentrutz hat sie."
 
 #: rob_the_robber.xml
 msgid "Sergeant Wober"
