--- a/translation/en/menu.pot
+++ b/translation/en/menu.pot
@@ -680,19 +680,27 @@ msgid "Off"
 msgstr ""
 
 #: ../src/gui/optionswindow.cpp:292
-msgid "Simple (Higher quality)"
+msgid "CPU based (method 1)"
 msgstr ""
 
 #: ../src/gui/optionswindow.cpp:293
-msgid "Simple (Lower quality)"
+msgid "CPU based (method 2)"
 msgstr ""
 
 #: ../src/gui/optionswindow.cpp:294
-msgid "Simulated (Experimental 1)"
+msgid "GPU based (simple method 1)"
 msgstr ""
 
 #: ../src/gui/optionswindow.cpp:295
-msgid "Simulated (Experimental 2)"
+msgid "GPU based (simple method 2)"
+msgstr ""
+
+#: ../src/gui/optionswindow.cpp:296
+msgid "GPU shader based (method 1)"
+msgstr ""
+
+#: ../src/gui/optionswindow.cpp:297
+msgid "GPU shader based (method 2)"
 msgstr ""
 
 #: ../src/gui/optionswindow.cpp:456
