Renamed and simplified shadow options to the 3 used options: Off, CPU based, GPU (shader) based. No longer initializing RTSS if the shadow mode is Off, or CPU based. Corrected static geometry shadows order of operations. Now they also work with CPU based shadows. Cleaned up Shader Manager code a bit.

--- a/share/translation/en/menu.pot
+++ b/share/translation/en/menu.pot
@@ -680,27 +680,11 @@ msgid "Off"
 msgstr ""
 
 #: ../src/gui/optionswindow.cpp:292
-msgid "CPU based (method 1)"
-msgstr ""
-
-#: ../src/gui/optionswindow.cpp:293
-msgid "CPU based (method 2)"
-msgstr ""
-
-#: ../src/gui/optionswindow.cpp:294
-msgid "GPU based (simple method 1)"
-msgstr ""
-
-#: ../src/gui/optionswindow.cpp:295
-msgid "GPU based (simple method 2)"
+msgid "CPU based"
 msgstr ""
 
 #: ../src/gui/optionswindow.cpp:296
-msgid "GPU shader based (method 1)"
-msgstr ""
-
-#: ../src/gui/optionswindow.cpp:297
-msgid "GPU shader based (method 2)"
+msgid "GPU (shader) based"
 msgstr ""
 
 #: ../src/gui/optionswindow.cpp:456
