added  Martin Preisler (Kulik) to the credits

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@
 =Stefan Stammberger (fusion44)
 =Nicholas Cosens (gnemo)
 =Augustin Preda (dezGusty)
+=Martin Preisler (Kulik)
 
 [B Network Library For Games (NLFG)]
 =David Athay (trapdoor)
